#!/usr/bin/env python3
"""
Chat Service é«˜å¹¶å‘æµ‹è¯•å®¢æˆ·ç«¯
æ”¯æŒ 10000+ å¹¶å‘è¿æ¥ï¼Œå•èŠã€ç¾¤èŠã€å¿ƒè·³ä¿æ´»ã€ç¦»çº¿æ¶ˆæ¯æµ‹è¯•

åè®®æ ¼å¼:
  Magic(2) + Version(1) + Serial(1) + Cmd(1) + ReqId(8) + Length(4) + Protobuf Body

CmdType:
  UNKNOWN = 0, HEARTBEAT = 1, AUTH = 2, SINGLE_CHAT = 3, GROUP_CHAT = 4, ACK = 5, ERROR = 6
"""

import asyncio
import argparse
import struct
import time
import random
import statistics
import signal
import sys
from dataclasses import dataclass, field
from typing import Dict, List, Optional, Callable
from collections import defaultdict
from concurrent.futures import ThreadPoolExecutor
import threading


# ============== åè®®å¸¸é‡ ==============
MAGIC = 0xCAFE
VERSION = 1
SERIAL = 1

class CmdType:
    UNKNOWN = 0
    HEARTBEAT = 1
    AUTH = 2
    SINGLE_CHAT = 3
    GROUP_CHAT = 4
    ACK = 5
    ERROR = 6


# ============== Protobuf ç¼–ç  ==============
def encode_varint(value: int) -> bytes:
    """ç¼–ç  varint"""
    buffer = bytearray()
    while True:
        if (value & ~0x7F) == 0:
            buffer.append(value)
            break
        else:
            buffer.append((value & 0x7F) | 0x80)
            value >>= 7
    return bytes(buffer)


def encode_string_field(field_num: int, value: str) -> bytes:
    """ç¼–ç å­—ç¬¦ä¸²å­—æ®µ"""
    if not value:
        return b''
    tag = (field_num << 3) | 2  # wire type 2 for length-delimited
    data = value.encode('utf-8')
    return bytes([tag]) + encode_varint(len(data)) + data


def encode_varint_field(field_num: int, value: int) -> bytes:
    """ç¼–ç  varint å­—æ®µ"""
    if value == 0:
        return b''
    tag = (field_num << 3) | 0  # wire type 0 for varint
    return bytes([tag]) + encode_varint(value)


def encode_auth_payload(token: str, device_id: str = "") -> bytes:
    """ç¼–ç  AuthPayload: token=1, device_id=2"""
    payload = bytearray()
    payload.extend(encode_string_field(1, token))
    payload.extend(encode_string_field(2, device_id))
    return bytes(payload)


def encode_chat_payload(
    cmd: int,
    session_id: int = 0,
    sender_id: int = 0,
    target_id: int = 0,
    content: str = "",
    content_type: str = "text",
    timestamp: int = 0,
    extra: str = ""
) -> bytes:
    """ç¼–ç  ChatPayload"""
    payload = bytearray()
    payload.extend(encode_varint_field(1, cmd))
    payload.extend(encode_varint_field(2, session_id))
    payload.extend(encode_varint_field(3, sender_id))
    payload.extend(encode_varint_field(4, target_id))
    payload.extend(encode_string_field(5, content))
    payload.extend(encode_string_field(6, content_type))
    payload.extend(encode_varint_field(7, timestamp or int(time.time() * 1000)))
    payload.extend(encode_string_field(8, extra))
    return bytes(payload)


def encode_message(cmd: int, body: bytes, req_id: int = 0) -> bytes:
    """ç¼–ç å®Œæ•´æ¶ˆæ¯å¸§"""
    if req_id == 0:
        req_id = int(time.time() * 1000000) & 0xFFFFFFFFFFFFFFFF
    header = struct.pack('!HBBBQI', MAGIC, VERSION, SERIAL, cmd, req_id, len(body))
    return header + body


def decode_header(data: bytes) -> Optional[dict]:
    """è§£ç æ¶ˆæ¯å¤´ (17 bytes)"""
    if len(data) < 17:
        return None
    magic, version, serial, cmd, req_id, length = struct.unpack('!HBBBQI', data[:17])
    if magic != MAGIC:
        return None
    return {
        'magic': magic,
        'version': version,
        'serial': serial,
        'cmd': cmd,
        'req_id': req_id,
        'length': length
    }


# ============== ç»Ÿè®¡æ”¶é›†å™¨ ==============
@dataclass
class Stats:
    """æµ‹è¯•ç»Ÿè®¡æ•°æ®"""
    connections_attempted: int = 0
    connections_success: int = 0
    connections_failed: int = 0
    auth_success: int = 0
    auth_failed: int = 0
    messages_sent: int = 0
    messages_received: int = 0
    heartbeats_sent: int = 0
    heartbeats_received: int = 0
    errors: int = 0
    latencies: List[float] = field(default_factory=list)
    start_time: float = 0
    end_time: float = 0
    
    _lock: threading.Lock = field(default_factory=threading.Lock)
    
    def add_latency(self, latency: float):
        with self._lock:
            self.latencies.append(latency)
    
    def increment(self, field_name: str, value: int = 1):
        with self._lock:
            setattr(self, field_name, getattr(self, field_name) + value)
    
    def report(self) -> str:
        duration = (self.end_time or time.time()) - self.start_time
        
        lines = [
            "\n" + "=" * 60,
            "                 ğŸ“Š å‹åŠ›æµ‹è¯•æŠ¥å‘Š",
            "=" * 60,
            f"â±ï¸  æ€»è€—æ—¶: {duration:.2f} ç§’",
            "",
            "ğŸ“¡ è¿æ¥ç»Ÿè®¡:",
            f"   å°è¯•è¿æ¥: {self.connections_attempted}",
            f"   æˆåŠŸè¿æ¥: {self.connections_success}",
            f"   å¤±è´¥è¿æ¥: {self.connections_failed}",
            f"   è¿æ¥æˆåŠŸç‡: {self.connections_success / max(self.connections_attempted, 1) * 100:.2f}%",
            "",
            "ğŸ” è®¤è¯ç»Ÿè®¡:",
            f"   è®¤è¯æˆåŠŸ: {self.auth_success}",
            f"   è®¤è¯å¤±è´¥: {self.auth_failed}",
            "",
            "ğŸ’¬ æ¶ˆæ¯ç»Ÿè®¡:",
            f"   å‘é€æ¶ˆæ¯: {self.messages_sent}",
            f"   æ¥æ”¶æ¶ˆæ¯: {self.messages_received}",
            f"   å‘é€ QPS: {self.messages_sent / max(duration, 1):.2f}",
            f"   æ¥æ”¶ QPS: {self.messages_received / max(duration, 1):.2f}",
            "",
            "ğŸ’“ å¿ƒè·³ç»Ÿè®¡:",
            f"   å‘é€å¿ƒè·³: {self.heartbeats_sent}",
            f"   æ¥æ”¶å¿ƒè·³: {self.heartbeats_received}",
            "",
        ]
        
        if self.latencies:
            sorted_latencies = sorted(self.latencies)
            lines.extend([
                "âš¡ å»¶è¿Ÿç»Ÿè®¡ (ms):",
                f"   æœ€å°å€¼: {min(self.latencies):.2f}",
                f"   æœ€å¤§å€¼: {max(self.latencies):.2f}",
                f"   å¹³å‡å€¼: {statistics.mean(self.latencies):.2f}",
                f"   ä¸­ä½æ•°: {statistics.median(self.latencies):.2f}",
                f"   P95: {sorted_latencies[int(len(sorted_latencies) * 0.95)]:.2f}",
                f"   P99: {sorted_latencies[int(len(sorted_latencies) * 0.99)]:.2f}",
            ])
        
        lines.extend([
            "",
            f"âŒ é”™è¯¯æ•°: {self.errors}",
            "=" * 60,
        ])
        
        return "\n".join(lines)


# ============== å¼‚æ­¥ Chat å®¢æˆ·ç«¯ ==============
class ChatClient:
    """å¼‚æ­¥ Chat å®¢æˆ·ç«¯"""
    
    def __init__(
        self,
        client_id: int,
        host: str,
        port: int,
        stats: Stats,
        token: Optional[str] = None
    ):
        self.client_id = client_id
        self.host = host
        self.port = port
        self.stats = stats
        self.token = token or f"user:{client_id}"
        
        self.reader: Optional[asyncio.StreamReader] = None
        self.writer: Optional[asyncio.StreamWriter] = None
        self.connected = False
        self.authenticated = False
        self.running = False
        
        self.pending_requests: Dict[int, float] = {}  # req_id -> send_time
        self.heartbeat_task: Optional[asyncio.Task] = None
        self.receive_task: Optional[asyncio.Task] = None
    
    async def connect(self) -> bool:
        """å»ºç«‹ TCP è¿æ¥"""
        self.stats.increment('connections_attempted')
        try:
            self.reader, self.writer = await asyncio.wait_for(
                asyncio.open_connection(self.host, self.port),
                timeout=10.0
            )
            self.connected = True
            self.stats.increment('connections_success')
            return True
        except Exception as e:
            self.stats.increment('connections_failed')
            self.stats.increment('errors')
            return False
    
    async def authenticate(self) -> bool:
        """å‘é€è®¤è¯è¯·æ±‚"""
        if not self.connected or not self.writer or not self.reader:
            return False
        
        try:
            body = encode_auth_payload(self.token, f"device_{self.client_id}")
            msg = encode_message(CmdType.AUTH, body)
            self.writer.write(msg)
            await self.writer.drain()
            
            header_data = await asyncio.wait_for(
                self.reader.read(17),
                timeout=5.0
            )
            header = decode_header(header_data)
            if header and header['length'] > 0:
                await self.reader.read(header['length'])
            
            self.authenticated = True
            self.stats.increment('auth_success')
            return True
        except Exception as e:
            self.stats.increment('auth_failed')
            self.stats.increment('errors')
            return False
    
    async def send_single_chat(self, target_id: int, content: str) -> int:
        """å‘é€å•èŠæ¶ˆæ¯"""
        if not self.authenticated or not self.writer:
            return 0
        
        req_id = int(time.time() * 1000000) & 0xFFFFFFFFFFFFFFFF
        body = encode_chat_payload(
            cmd=CmdType.SINGLE_CHAT,
            sender_id=self.client_id,
            target_id=target_id,
            content=content,
            timestamp=int(time.time() * 1000)
        )
        msg = encode_message(CmdType.SINGLE_CHAT, body, req_id)
        
        try:
            send_time = time.time()
            self.pending_requests[req_id] = send_time
            self.writer.write(msg)
            await self.writer.drain()
            self.stats.increment('messages_sent')
            return req_id
        except Exception:
            self.stats.increment('errors')
            return 0
    
    async def send_group_chat(self, session_id: int, content: str) -> int:
        """å‘é€ç¾¤èŠæ¶ˆæ¯"""
        if not self.authenticated or not self.writer:
            return 0
        
        req_id = int(time.time() * 1000000) & 0xFFFFFFFFFFFFFFFF
        body = encode_chat_payload(
            cmd=CmdType.GROUP_CHAT,
            session_id=session_id,
            sender_id=self.client_id,
            content=content,
            timestamp=int(time.time() * 1000)
        )
        msg = encode_message(CmdType.GROUP_CHAT, body, req_id)
        
        try:
            send_time = time.time()
            self.pending_requests[req_id] = send_time
            self.writer.write(msg)
            await self.writer.drain()
            self.stats.increment('messages_sent')
            return req_id
        except Exception:
            self.stats.increment('errors')
            return 0
    
    async def send_heartbeat(self):
        """å‘é€å¿ƒè·³"""
        if not self.connected or not self.writer:
            return
        
        try:
            msg = encode_message(CmdType.HEARTBEAT, b'')
            self.writer.write(msg)
            await self.writer.drain()
            self.stats.increment('heartbeats_sent')
        except Exception:
            self.stats.increment('errors')
    
    async def _heartbeat_loop(self, interval: float = 30.0):
        """å¿ƒè·³å¾ªç¯"""
        while self.running and self.connected:
            await asyncio.sleep(interval)
            await self.send_heartbeat()
    
    async def _receive_loop(self):
        """æ¥æ”¶æ¶ˆæ¯å¾ªç¯"""
        while self.running and self.connected and self.reader:
            try:
                header_data = await asyncio.wait_for(
                    self.reader.read(17),
                    timeout=60.0
                )
                if not header_data:
                    break
                
                header = decode_header(header_data)
                if not header:
                    continue
                
                body = b''
                if header['length'] > 0:
                    body = await self.reader.read(header['length'])
                
                receive_time = time.time()
                
                cmd = header['cmd']
                req_id = header['req_id']
                
                if cmd == CmdType.HEARTBEAT:
                    self.stats.increment('heartbeats_received')
                elif cmd in (CmdType.SINGLE_CHAT, CmdType.GROUP_CHAT, CmdType.ACK):
                    self.stats.increment('messages_received')
                    if req_id in self.pending_requests:
                        latency = (receive_time - self.pending_requests[req_id]) * 1000
                        self.stats.add_latency(latency)
                        del self.pending_requests[req_id]
                elif cmd == CmdType.ERROR:
                    self.stats.increment('errors')
                    
            except asyncio.TimeoutError:
                continue
            except Exception:
                self.stats.increment('errors')
                break
    
    async def start(self, heartbeat_interval: float = 30.0):
        """å¯åŠ¨å®¢æˆ·ç«¯"""
        self.running = True
        self.heartbeat_task = asyncio.create_task(self._heartbeat_loop(heartbeat_interval))
        self.receive_task = asyncio.create_task(self._receive_loop())
    
    async def stop(self):
        """åœæ­¢å®¢æˆ·ç«¯"""
        self.running = False
        
        if self.heartbeat_task:
            self.heartbeat_task.cancel()
            try:
                await self.heartbeat_task
            except asyncio.CancelledError:
                pass
        
        if self.receive_task:
            self.receive_task.cancel()
            try:
                await self.receive_task
            except asyncio.CancelledError:
                pass
        
        if self.writer:
            self.writer.close()
            try:
                await self.writer.wait_closed()
            except Exception:
                pass
        
        self.connected = False


# ============== æµ‹è¯•åœºæ™¯ ==============
class TestScenario:
    """æµ‹è¯•åœºæ™¯åŸºç±»"""
    
    def __init__(
        self,
        host: str,
        port: int,
        client_count: int,
        stats: Stats
    ):
        self.host = host
        self.port = port
        self.client_count = client_count
        self.stats = stats
        self.clients: List[ChatClient] = []
    
    async def setup(self):
        """åˆ›å»ºå¹¶è¿æ¥å®¢æˆ·ç«¯"""
        print(f"ğŸ”Œ åˆ›å»º {self.client_count} ä¸ªå®¢æˆ·ç«¯è¿æ¥...")
        
        # åˆ†æ‰¹è¿æ¥ï¼Œé¿å…ç¬æ—¶å‹åŠ›è¿‡å¤§
        batch_size = min(500, self.client_count)
        
        for batch_start in range(0, self.client_count, batch_size):
            batch_end = min(batch_start + batch_size, self.client_count)
            batch_tasks = []
            
            for i in range(batch_start, batch_end):
                client = ChatClient(i + 1, self.host, self.port, self.stats)
                self.clients.append(client)
                batch_tasks.append(self._connect_and_auth(client))
            
            await asyncio.gather(*batch_tasks, return_exceptions=True)
            print(f"   å·²è¿æ¥: {batch_end}/{self.client_count}")
        
        # å¯åŠ¨å¿ƒè·³å’Œæ¥æ”¶
        for client in self.clients:
            if client.authenticated:
                await client.start(heartbeat_interval=30.0)
    
    async def _connect_and_auth(self, client: ChatClient):
        """è¿æ¥å¹¶è®¤è¯"""
        if await client.connect():
            await asyncio.sleep(0.01)  # çŸ­æš‚å»¶è¿Ÿé¿å…ç¬æ—¶å‹åŠ›
            await client.authenticate()
    
    async def run(self):
        """è¿è¡Œæµ‹è¯•"""
        raise NotImplementedError
    
    async def teardown(self):
        """æ¸…ç†èµ„æº"""
        print("ğŸ§¹ æ¸…ç†è¿æ¥...")
        tasks = [client.stop() for client in self.clients]
        await asyncio.gather(*tasks, return_exceptions=True)


class SingleChatScenario(TestScenario):
    """å•èŠæµ‹è¯•åœºæ™¯"""
    
    def __init__(
        self,
        host: str,
        port: int,
        client_count: int,
        messages_per_client: int,
        stats: Stats
    ):
        super().__init__(host, port, client_count, stats)
        self.messages_per_client = messages_per_client
    
    async def run(self):
        print(f"ğŸ’¬ å¼€å§‹å•èŠæµ‹è¯•: {self.messages_per_client} æ¡æ¶ˆæ¯/å®¢æˆ·ç«¯")
        
        async def send_messages(client: ChatClient):
            if not client.authenticated:
                return
            for i in range(self.messages_per_client):
                # éšæœºé€‰æ‹©ç›®æ ‡ç”¨æˆ·
                target_id = random.randint(1, self.client_count)
                while target_id == client.client_id:
                    target_id = random.randint(1, self.client_count)
                
                await client.send_single_chat(
                    target_id,
                    f"Hello from {client.client_id}, msg #{i}"
                )
                await asyncio.sleep(0.05)  # æ§åˆ¶å‘é€é€Ÿç‡
        
        tasks = [send_messages(c) for c in self.clients if c.authenticated]
        await asyncio.gather(*tasks, return_exceptions=True)


class GroupChatScenario(TestScenario):
    """ç¾¤èŠæµ‹è¯•åœºæ™¯"""
    
    def __init__(
        self,
        host: str,
        port: int,
        client_count: int,
        group_count: int,
        messages_per_client: int,
        stats: Stats
    ):
        super().__init__(host, port, client_count, stats)
        self.group_count = group_count
        self.messages_per_client = messages_per_client
    
    async def run(self):
        print(f"ğŸ‘¥ å¼€å§‹ç¾¤èŠæµ‹è¯•: {self.group_count} ä¸ªç¾¤, {self.messages_per_client} æ¡æ¶ˆæ¯/å®¢æˆ·ç«¯")
        
        async def send_group_messages(client: ChatClient):
            if not client.authenticated:
                return
            for i in range(self.messages_per_client):
                # éšæœºé€‰æ‹©ç¾¤ç»„
                session_id = random.randint(1, self.group_count)
                await client.send_group_chat(
                    session_id,
                    f"Group msg from {client.client_id}, msg #{i}"
                )
                await asyncio.sleep(0.05)
        
        tasks = [send_group_messages(c) for c in self.clients if c.authenticated]
        await asyncio.gather(*tasks, return_exceptions=True)


class HeartbeatScenario(TestScenario):
    """å¿ƒè·³ä¿æ´»æµ‹è¯•åœºæ™¯"""
    
    def __init__(
        self,
        host: str,
        port: int,
        client_count: int,
        duration: int,
        stats: Stats
    ):
        super().__init__(host, port, client_count, stats)
        self.duration = duration
    
    async def run(self):
        print(f"ğŸ’“ å¼€å§‹å¿ƒè·³æµ‹è¯•: æŒç»­ {self.duration} ç§’")
        await asyncio.sleep(self.duration)
        print("ğŸ’“ å¿ƒè·³æµ‹è¯•å®Œæˆ")


class OfflineMessageScenario(TestScenario):
    """ç¦»çº¿æ¶ˆæ¯æµ‹è¯•åœºæ™¯"""
    
    def __init__(
        self,
        host: str,
        port: int,
        client_count: int,
        messages_per_client: int,
        stats: Stats
    ):
        super().__init__(host, port, client_count, stats)
        self.messages_per_client = messages_per_client
    
    async def run(self):
        print("ğŸ“¤ å¼€å§‹ç¦»çº¿æ¶ˆæ¯æµ‹è¯•...")
        
        # 1. è®©ä¸€åŠå®¢æˆ·ç«¯ä¸‹çº¿
        offline_count = self.client_count // 2
        online_clients = self.clients[:offline_count]
        offline_clients = self.clients[offline_count:]
        
        print(f"   æ–­å¼€ {len(offline_clients)} ä¸ªå®¢æˆ·ç«¯...")
        for client in offline_clients:
            await client.stop()
        
        await asyncio.sleep(1)
        
        # 2. åœ¨çº¿å®¢æˆ·ç«¯å‘é€æ¶ˆæ¯ç»™ç¦»çº¿å®¢æˆ·ç«¯
        print(f"   å‘é€æ¶ˆæ¯ç»™ç¦»çº¿å®¢æˆ·ç«¯...")
        async def send_to_offline(client: ChatClient):
            if not client.authenticated:
                return
            for i in range(self.messages_per_client):
                target_id = random.choice(offline_clients).client_id
                await client.send_single_chat(
                    target_id,
                    f"Offline msg from {client.client_id}, msg #{i}"
                )
                await asyncio.sleep(0.05)
        
        tasks = [send_to_offline(c) for c in online_clients if c.authenticated]
        await asyncio.gather(*tasks, return_exceptions=True)
        
        await asyncio.sleep(1)
        
        # 3. ç¦»çº¿å®¢æˆ·ç«¯é‡æ–°ä¸Šçº¿
        print(f"   ç¦»çº¿å®¢æˆ·ç«¯é‡æ–°è¿æ¥...")
        for client in offline_clients:
            if await client.connect():
                await client.authenticate()
                if client.authenticated:
                    await client.start()
        
        # ç­‰å¾…ç¦»çº¿æ¶ˆæ¯æ¨é€
        print("   ç­‰å¾…ç¦»çº¿æ¶ˆæ¯æ¨é€...")
        await asyncio.sleep(5)


class StressTestScenario(TestScenario):
    """å‹åŠ›æµ‹è¯•åœºæ™¯: æœ€å¤§è¿æ¥æ•°å’Œæ¶ˆæ¯ååé‡"""
    
    def __init__(
        self,
        host: str,
        port: int,
        client_count: int,
        duration: int,
        messages_per_second: int,
        stats: Stats
    ):
        super().__init__(host, port, client_count, stats)
        self.duration = duration
        self.messages_per_second = messages_per_second
    
    async def run(self):
        print(f"ğŸ”¥ å¼€å§‹å‹åŠ›æµ‹è¯•: {self.duration}ç§’, ç›®æ ‡ {self.messages_per_second} msg/s")
        
        # è®¡ç®—æ¯ä¸ªå®¢æˆ·ç«¯æ¯ç§’éœ€è¦å‘é€çš„æ¶ˆæ¯æ•°
        authenticated_clients = [c for c in self.clients if c.authenticated]
        if not authenticated_clients:
            print("âŒ æ²¡æœ‰å·²è®¤è¯çš„å®¢æˆ·ç«¯")
            return
        
        interval = len(authenticated_clients) / self.messages_per_second
        
        start_time = time.time()
        message_count = 0
        
        while time.time() - start_time < self.duration:
            client = authenticated_clients[message_count % len(authenticated_clients)]
            target_id = random.randint(1, self.client_count)
            while target_id == client.client_id:
                target_id = random.randint(1, self.client_count)
            
            await client.send_single_chat(target_id, f"Stress test msg #{message_count}")
            message_count += 1
            
            # æ§åˆ¶å‘é€é€Ÿç‡
            expected_time = start_time + (message_count * interval)
            sleep_time = expected_time - time.time()
            if sleep_time > 0:
                await asyncio.sleep(sleep_time)
        
        print(f"ğŸ”¥ å‹åŠ›æµ‹è¯•å®Œæˆ: å®é™…å‘é€ {message_count} æ¡æ¶ˆæ¯")


# ============== ä¸»ç¨‹åº ==============
async def run_benchmark(args):
    """è¿è¡ŒåŸºå‡†æµ‹è¯•"""
    stats = Stats()
    stats.start_time = time.time()
    
    scenarios = []
    
    # æ ¹æ®å‚æ•°åˆ›å»ºæµ‹è¯•åœºæ™¯
    if args.scenario == 'all' or args.scenario == 'single':
        scenarios.append(SingleChatScenario(
            args.host, args.port, args.clients,
            args.messages, stats
        ))
    
    if args.scenario == 'all' or args.scenario == 'group':
        scenarios.append(GroupChatScenario(
            args.host, args.port, args.clients,
            args.groups, args.messages, stats
        ))
    
    if args.scenario == 'all' or args.scenario == 'heartbeat':
        scenarios.append(HeartbeatScenario(
            args.host, args.port, args.clients,
            args.duration, stats
        ))
    
    if args.scenario == 'all' or args.scenario == 'offline':
        scenarios.append(OfflineMessageScenario(
            args.host, args.port, args.clients,
            args.messages, stats
        ))
    
    if args.scenario == 'stress':
        scenarios.append(StressTestScenario(
            args.host, args.port, args.clients,
            args.duration, args.qps, stats
        ))
    
    # è¿è¡Œæ‰€æœ‰åœºæ™¯
    for scenario in scenarios:
        print(f"\n{'='*60}")
        print(f"ğŸš€ å¯åŠ¨åœºæ™¯: {scenario.__class__.__name__}")
        print('='*60)
        
        try:
            await scenario.setup()
            await scenario.run()
        except KeyboardInterrupt:
            print("\nâš ï¸ æµ‹è¯•è¢«ä¸­æ–­")
        finally:
            await scenario.teardown()
    
    stats.end_time = time.time()
    print(stats.report())


def main():
    parser = argparse.ArgumentParser(
        description='Chat Service é«˜å¹¶å‘æµ‹è¯•å®¢æˆ·ç«¯',
        formatter_class=argparse.RawDescriptionHelpFormatter,
        epilog="""
ç¤ºä¾‹:
  # è¿è¡Œæ‰€æœ‰æµ‹è¯•åœºæ™¯ (100ä¸ªå®¢æˆ·ç«¯)
  python chat_client.py --scenario all --clients 100

  # å•èŠå‹æµ‹ (1000ä¸ªå®¢æˆ·ç«¯, æ¯å®¢æˆ·ç«¯10æ¡æ¶ˆæ¯)
  python chat_client.py --scenario single --clients 1000 --messages 10

  # ç¾¤èŠå‹æµ‹ (500ä¸ªå®¢æˆ·ç«¯, 10ä¸ªç¾¤)
  python chat_client.py --scenario group --clients 500 --groups 10 --messages 5

  # å¿ƒè·³ä¿æ´»æµ‹è¯• (10000ä¸ªè¿æ¥, æŒç»­60ç§’)
  python chat_client.py --scenario heartbeat --clients 10000 --duration 60

  # ç¦»çº¿æ¶ˆæ¯æµ‹è¯•
  python chat_client.py --scenario offline --clients 100 --messages 5

  # å‹åŠ›æµ‹è¯• (ç›®æ ‡ 5000 QPS)
  python chat_client.py --scenario stress --clients 5000 --duration 30 --qps 5000
        """
    )
    
    parser.add_argument('--host', default='127.0.0.1', help='æœåŠ¡å™¨åœ°å€ (é»˜è®¤: 127.0.0.1)')
    parser.add_argument('--port', type=int, default=9090, help='æœåŠ¡å™¨ç«¯å£ (é»˜è®¤: 9090)')
    parser.add_argument('--clients', type=int, default=100, help='å®¢æˆ·ç«¯æ•°é‡ (é»˜è®¤: 100)')
    parser.add_argument('--messages', type=int, default=10, help='æ¯å®¢æˆ·ç«¯æ¶ˆæ¯æ•° (é»˜è®¤: 10)')
    parser.add_argument('--groups', type=int, default=5, help='ç¾¤ç»„æ•°é‡ (é»˜è®¤: 5)')
    parser.add_argument('--duration', type=int, default=30, help='æµ‹è¯•æŒç»­æ—¶é—´/ç§’ (é»˜è®¤: 30)')
    parser.add_argument('--qps', type=int, default=1000, help='ç›®æ ‡ QPS (é»˜è®¤: 1000)')
    parser.add_argument(
        '--scenario',
        choices=['all', 'single', 'group', 'heartbeat', 'offline', 'stress'],
        default='all',
        help='æµ‹è¯•åœºæ™¯ (é»˜è®¤: all)'
    )
    
    args = parser.parse_args()
    
    print(f"""
â•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—
â•‘          Chat Service é«˜å¹¶å‘æµ‹è¯•å®¢æˆ·ç«¯ v1.0                  â•‘
â• â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•£
â•‘  æœåŠ¡å™¨: {args.host}:{args.port:<42}â•‘
â•‘  å®¢æˆ·ç«¯æ•°: {args.clients:<48}â•‘
â•‘  æµ‹è¯•åœºæ™¯: {args.scenario:<48}â•‘
â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
    """)
    
    # è®¾ç½®ä¿¡å·å¤„ç†
    loop = asyncio.new_event_loop()
    asyncio.set_event_loop(loop)
    
    try:
        loop.run_until_complete(run_benchmark(args))
    except KeyboardInterrupt:
        print("\nâš ï¸ æµ‹è¯•è¢«ç”¨æˆ·ä¸­æ–­")
    finally:
        loop.close()


if __name__ == '__main__':
    main()
